Modif responsive hébergement mobile

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <nav>
       <img src="./images/logo/Reservia.svg" alt="Logo">
       <ul class="navbar">
-        <li class="element"><a href="">Hébergements</a></li>
-        <li class="element"><a href="">Activités</a></li>
+        <li class="element"><a href="#section1">Hébergements</a></li>
+        <li class="element"><a href="#section2">Activités</a></li>
         <li class="bold">S'inscrire</li>
       </ul>
     </nav>
@@ -78,7 +78,7 @@
     <div class="main">
       <!-- Hébergements -->
 
-      <section class="section1">
+      <section id="section1">
         <h2>Hébergements à Marseille</h2>
         <div class="container">
           <article>
@@ -235,7 +235,7 @@
     </div>
 
     <!-- Activités -->
-     <section class="section2">
+     <section id="section2">
       <h2>Activités à Marseilles</h2>
       <div class="block">
           <a href="">
