Upgrade hébergement/populaire & responsive activité

--- a/index.html
+++ b/index.html
@@ -13,24 +13,23 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/mobile.css" />
   <link rel="stylesheet" href="./css/tablette.css">
-  <!-- <link rel="stylesheet" href="./css/landscape.css">
-  <link rel="stylesheet" href="./css/laptop.css"> -->
 
   <!-- Icon onglet -->
-  <link rel="shortcut icon" href="./images/logo/favicon.ico">
+  <link rel="shortcut icon" href="./images/logo/reservia_icon.ico">
 
-  <!-- Lien Font -->
+  <!-- Lien Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-  <title>Reservia</title>
+  <!-- Lien Icons -->
   <script src="https://kit.fontawesome.com/ae69335240.js" crossorigin="anonymous"></script>
+
+  <title>Reservia</title>
 </head>
 
 <body>
 
   <!--Header & Nav-->
-
   <header>
     <nav>
       <img src="./images/logo/Reservia.svg" alt="Logo">
@@ -42,7 +41,7 @@
     </nav>
   </header>
 
-  <section>
+  <section id="section">
     <!-- Introduction -->
     <div id="intro">
       <h1>Trouver votre hébergement pour des vacances de rêves</h1>
@@ -74,10 +73,11 @@
     </div>
   </section>
 
+  <!-- Main : Hébergements + Populaire -->
   <main>
     <div class="main">
-      <!-- Hébergements -->
 
+      <!-- Section - Hébergements -->
       <section id="section1">
         <h2>Hébergements à Marseille</h2>
         <div class="container">
@@ -179,8 +179,7 @@
 
       <aside>
 
-        <!-- Populaire -->
-
+        <!-- Aside - Populaire -->
         <div class="populaires">
           <h2>Les plus populaires</h2>
           <i class="fas fa-chart-line"></i>
@@ -234,63 +233,63 @@
       </aside>
     </div>
 
-    <!-- Activités -->
-     <section id="section2">
+    <!-- Activités à Marseille-->
+    <section id="section2">
       <h2>Activités à Marseilles</h2>
       <div class="block">
+        <a href="">
+          <div class="large">
+            <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Port">
+            <h3>Vieux Port</h3>
+          </div>
+        </a>
+
+        <div class="block1">
           <a href="">
-            <div class="large">
-              <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Port">
-              <h3>Vieux Port</h3>
+            <div class="medium">
+              <img src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Château fort">
+              <h3>Fort de Pomègues</h3>
             </div>
           </a>
 
-         <div class="block1">
-           <a href="">
-             <div class="medium">
-               <img src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Château fort">
-               <h3>Fort de Pomègues</h3>
-             </div>
-           </a>
+          <a href="">
+            <div class="small">
+              <img src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Ile du frioul">
+              <h3>Îles du Frioul</h3>
+            </div>
+          </a>
 
-           <a href="">
-             <div class="small">
-               <img src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Ile du frioul">
-               <h3>Iles du Frioul</h3>
-             </div>
-           </a>
+        </div>
 
-         </div>
-
-         <a href="">
+        <a href="">
           <div class="large">
             <img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc national des Calanques">
             <h3>Parc National des Calanques</h3>
           </div>
-         </a>
+        </a>
 
         <div class="block1">
-         <a href="">
-           <div class="moyen">
-             <img src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde">
-             <h3>Notre-Dame-de-la-Garde</h3>
-           </div>
-         </a>
+          <a href="">
+            <div class="moyen">
+              <img src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde">
+              <h3>Notre-Dame-de-la-Garde</h3>
+            </div>
+          </a>
 
-         <a href="">
-           <div class="moyen">
-             <img src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc Longchamp">
-             <h3>Parc Longchamp</h3>
-           </div>
-         </a>
-       </div>
+          <a href="">
+            <div class="moyen">
+              <img src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc Longchamp">
+              <h3>Parc Longchamp</h3>
+            </div>
+          </a>
+        </div>
 
       </div>
     </section>
 
   </main>
 
-  <!-- <footer>
+  <footer>
     <div id="footer">
       <div class="footer_item">
         <h4>A propos</h4>
@@ -317,7 +316,7 @@
         </ul>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
 </body>
 
