--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <nav>
       <img src="./images/logo/Reservia.svg" alt="Logo">
       <ul class="navbar">
-        <li class="element"><a href="#section1">Hébergements</a></li>
-        <li class="element"><a href="#section2">Activités</a></li>
-        <li class="bold">S'inscrire</li>
+        <li class="entete"><a href="#section1">Hébergements</a></li>
+        <li class="entete"><a href="#section2">Activités</a></li>
+        <li id="inscrire">S'inscrire</li>
       </ul>
     </nav>
   </header>
@@ -290,7 +290,7 @@
   </main>
 
   <!-- Footer -->
-  <footer id="footer">
+  <footer>
     <div id="footer_content">
       <div class="footer_item">
         <h4>A propos</h4>
