Upgrade + amélioration site reservia

--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
 
   <section id="section" class="test_container">
     <!-- Introduction -->
-    <div id="intro">
-      <h1>Trouver votre hébergement pour des vacances de rêves</h1>
-      <p>En plein centre ville ou en pleine nature</p>
-    </div>
+    <h1>Trouver votre hébergement pour des vacances de rêves</h1>
+    <p>En plein centre ville ou en pleine nature</p>
 
     <!-- Searchbar -->
     <div id="searchbar">
@@ -60,7 +58,7 @@
     <div class="filtre">
       <p>Filtres</p>
       <ul class="list">
-        <li class="list_item"><a href=""><i class="fas fa-money-bill-wave"></i> Economique</a></li>
+        <li class="list_item"><a href=""><i class="fas fa-money-bill-wave"></i> Économique</a></li>
         <li class="list_item"><a href=""><i class="fas fa-child"></i> Familial</a></li>
         <li class="list_item"><a href=""><i class="fas fa-heart"></i> Romantique</a></li>
         <li class="list_item"><a href=""><i class="fas fa-dog"></i> Animaux autorisés</a></li>
@@ -178,14 +176,13 @@
         </div>
       </section>
 
-      <aside>
-
-        <!-- Aside - Populaire -->
+      <!-- Section - Populaire -->
+      <section class="sidebar">
         <div class="populaires">
           <h2>Les plus populaires</h2>
           <i class="fas fa-chart-line"></i>
         </div>
-        <div class="sidebar">
+        <div class="sidebar_item">
           <a href="">
             <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre d'hôtel">
             <div class="right">
@@ -231,60 +228,59 @@
             </div>
           </a>
         </div>
-      </aside>
+      </section>
     </div>
 
     <!-- Section - Activités -->
     <section id="section2">
       <h2>Activités à Marseilles</h2>
       <div class="block">
-        <a href="">
-          <div class="large">
+
+        <article class="large">
+          <a href="">
             <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Port">
             <h3>Vieux Port</h3>
-          </div>
-        </a>
+          </a>
+        </article>
 
         <div class="block1">
-          <a href="">
-            <div class="medium">
+          <article class="medium">
+            <a href="">
               <img src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Château fort">
               <h3>Fort de Pomègues</h3>
-            </div>
-          </a>
+            </a>
+          </article>
 
-          <a href="">
-            <div class="small">
+          <article class="small">
+            <a href="">
               <img src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Ile du frioul">
               <h3>Îles du Frioul</h3>
-            </div>
-          </a>
-
+            </a>
+          </article>
         </div>
 
-        <a href="">
-          <div class="large">
+        <article class="large">
+          <a href="">
             <img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc national des Calanques">
             <h3>Parc National des Calanques</h3>
-          </div>
-        </a>
+          </a>
+        </article>
 
         <div class="block1">
-          <a href="">
-            <div class="moyen">
+          <article class="moyen">
+            <a href="">
               <img src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde">
               <h3>Notre-Dame-de-la-Garde</h3>
-            </div>
-          </a>
+            </a>
+          </article>
 
-          <a href="">
-            <div class="moyen">
+          <article class="moyen">
+            <a href="">
               <img src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc Longchamp">
               <h3>Parc Longchamp</h3>
-            </div>
-          </a>
+            </a>
         </div>
-
+        </article>
       </div>
     </section>
   </main>
